solved map z-index issue

--- a/src/app/map-view/map-view.component.scss
+++ b/src/app/map-view/map-view.component.scss
@@ -1,6 +1,7 @@
 #map {
   height: 500px;
   width: 100%;
+  z-index: 0;
 }
 
 // .md-btn {
