--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -2,7 +2,7 @@
 .search_div {
   position: fixed;
   left: 0;
-  top: 95.05px;
+  top: 84.65px;
   width: calc(100% - 50px);
   padding: 15px 25px;
   display: flex;
